test/typecheck/tc011.compile.err
"tc011.curry", line 3.8: Type error in application
f "Hello"

Term: "Hello"
Inferred type: [Char]
Expected type: [Int]
Types Int and Char are incompatible
